# ha-welkom

./: .gitignore  README.md  __init__.py  binary_sensor.py  client.py  config_flow.py  const.py  coordinator.py  device_tracker.py  hacs.json  manifest.json  models.py  ping.py  pyproject.toml  sensor.py  services.yaml  strings.json  welkom-activity.js
.github/workflows/: ci.yml
translations/: en.json
